--- a/index2.html
+++ b/index2.html
@@ -147,17 +147,17 @@ footer .nav>li>a:hover {
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="#section1">Who</a></li>
-        <li><a href="#section2">What</a></li>
-        <li><a href="#section3">When</a></li>
-        <li><a href="#section4">Where</a></li>
-        <li><a href="#section5">Why</a></li>
-        <li><a href="#section6">Why2</a></li>
-        <li><a href="#section7">Who2</a></li>
+        <li><a href="#section1">Welcome</a></li>
+        <li><a href="#section2">Location</a></li>
+        <li><a href="#section3">Design</a></li>
+        <li><a href="#section4">Permitted Boats</a></li>
+        <li><a href="#section5">Timing</a></li>
+        <li><a href="#section6">Why</a></li>
         <li>&nbsp;</li>
       </ul>
       <form class="navbar-form">
         <div class="form-group" style="display:inline;">
+<!--
           <div class="input-group"> 
             <div class="input-group-btn">
               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-chevron-down"></span></button>
@@ -172,6 +172,7 @@ footer .nav>li>a:hover {
             <input type="text" class="form-control" placeholder="What are you searching for?">
             <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> </span>
           </div>
+-->
         </div>
       </form>
     </div>
@@ -179,23 +180,23 @@ footer .nav>li>a:hover {
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h1 class="text-center v-center">What.</h1>
+  	<h1 class="text-center v-center">Welcome to The Hague Boat Launch!</h1>
  	
   	<div class="container">
       <div class="row">
           <div class="col-sm-4">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-2 text-center"><h3>Robust</h3><p>There is other content and snippets of details or features that can be placed here..</p><i class="fa fa-cog fa-5x"></i></div>
+              <div class="col-sm-10 col-sm-offset-2 text-center"><h3>Fitting</h3><p>Small sailboats, not motorboats. Kayaks, not jet skis. Walk-in launches, not towed-in by a car. The Ghent section of Norfolk is a historical masterpiece. A boat launch will amplify, not distract from, this area's unique setting on the historical Elizabeth River.</p><i class="fa fa-cog fa-5x"></i></div>
             </div>
           </div>
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-1 text-center"><h3>Simple</h3><p>You may also want to create content that compells users to scroll down more..</p><i class="fa fa-user fa-5x"></i></div>
+              <div class="col-sm-10 col-sm-offset-1 text-center"><h3>Convenient</h3><p>The Hague Boat Launch seeks to make waterway access the most convenient to Norfolk residents through providing easy access to launching their watercraft.</p><i class="fa fa-user fa-5x"></i></div>
             </div>
           </div>
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 text-center"><h3>Clean</h3><p>In the first 30 seconds of a user's visit to your site they decide if they're going to stay..</p><i class="fa fa-mobile fa-5x"></i></div>
+              <div class="col-sm-10 text-center"><h3>Accessible</h3><p>Through up front design, the boat launch will deliberately plan the watercraft types to be supported. A launch will need to support Americans with Disabilities Act (ADA) standards, kayaks, and small sailboats.</p><i class="fa fa-mobile fa-5x"></i></div>
             </div>
           </div>
       </div><!--/row-->
@@ -206,9 +207,9 @@ footer .nav>li>a:hover {
 <section class="container-fluid" id="section2">
   <div class="row">
   	<div class="col-sm-8 col-sm-offset-2 text-center">
-        <h1>What is Bootstrap?</h1>
+        <h1>Location</h1>
         <br>
-		<p class="lead">Bootstrap is a free collection of tools for creating websites and web applications. It contains HTML and CSS-based design templates for typography, forms, buttons, navigation and other interface components, as well as optional JavaScript extensions. It is the No.1 project on GitHub with 65,000+ stars and 23,800 forks (as of March 2014) [1] and has been used by NASA and MSNBC, among many others..</p>
+		<p class="lead">The location is still undecided.</p>
         <br> 
       	<i style="font-size:120px" class="fa fa-camera fa-5x"></i>
       	<p>Big 'ol Camera Icon</p>
