--- a/index.html
+++ b/index.html
@@ -180,23 +180,23 @@ footer .nav>li>a:hover {
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h1 class="text-center v-center">Welcome to The Hague Boat Launch!</h1>
+  	<h1 class="text-center v-center">Mission: Advocate for development of a boat launch in The Hague (Smith's Creek)</h1>
  	
   	<div class="container">
       <div class="row">
           <div class="col-sm-4">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-2 text-center"><h3>Fitting</h3><p>Small sailboats, not motorboats. Kayaks, not jet skis. Walk-in launches, not towed-in by a car. The Ghent section of Norfolk is a historical masterpiece. A boat launch will amplify, not distract from, this area's unique setting on the historical Elizabeth River.</p><i class="fa fa-cog fa-5x"></i></div>
+              <div class="col-sm-10 col-sm-offset-2 text-center"><h3>Fitting</h3><p>Small sailboats, not motorboats. Kayaks, not jet skis. Walk-in launches, not towed-in by a car. The Ghent section of Norfolk is a historical masterpiece. A boat launch will amplify, not distract from, this area's unique setting on the historical Elizabeth River.</p><i class="fa fa-anchor fa-5x"></i></div>
             </div>
           </div>
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-1 text-center"><h3>Convenient</h3><p>The Hague Boat Launch seeks to make waterway access the most convenient to Norfolk residents through providing easy access to launching their watercraft.</p><i class="fa fa-user fa-5x"></i></div>
+              <div class="col-sm-10 col-sm-offset-1 text-center"><h3>Convenient</h3><p>The Hague Boat Launch seeks to make waterway access the most convenient to Norfolk residents through providing easy access to launching their watercraft.</p><i class="fa fa-check-circle fa-5x"></i></div>
             </div>
           </div>
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 text-center"><h3>Accessible</h3><p>Through up front design, the boat launch will deliberately plan the watercraft types to be supported. A launch will need to support Americans with Disabilities Act (ADA) standards, kayaks, and small sailboats.</p><i class="fa fa-mobile fa-5x"></i></div>
+              <div class="col-sm-10 text-center"><h3>Accessible</h3><p>Through up front design, the boat launch will deliberately plan the watercraft types to be supported. A launch will need to support Americans with Disabilities Act (ADA) standards, kayaks, and small sailboats.</p><i class="fa fa-wheelchair fa-5x"></i></div>
             </div>
           </div>
       </div><!--/row-->
