--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@ footer .nav>li>a:hover {
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h1 class="text-center v-center">Mission: Advocate for development of a boat launch in The Hague (Smith's Creek)</h1>
+  	<h1 class="text-center v-center">Get on the Water</h1>
+    <h3 class="text-center v-center">A boat launch in The Hague should be:</h1>
  	
   	<div class="container">
       <div class="row">
@@ -209,9 +210,45 @@ footer .nav>li>a:hover {
   	<div class="col-sm-8 col-sm-offset-2 text-center">
         <h1>Location</h1>
         <br>
-		<p class="lead">The location is still undecided.</p>
+		<p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/view
+  ?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o
+  &center=-36.85916,-76.29933
+  &zoom=18
+  &maptype=satellite">
+</iframe>
         <br> 
-      	<i style="font-size:120px" class="fa fa-camera fa-5x"></i>
+        <br>
+    <p class="lead">East side of Smith's Creek: Mowbray and Botetourt.</p>
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/view
+  ?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o
+  &center=-36.85541,-76.29593
+  &zoom=18
+  &maptype=satellite">
+</iframe>
+        <br> 
+        <br>
+    <p class="lead">Mowbray and Fairfax.</p>
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/view
+  ?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o
+  &center=-36.85894,-76.29887
+  &zoom=18
+  &maptype=satellite">
+</iframe>
+        <br> 
+      	<i style="font-size:120px" class="fa fa-map-marker fa-5x"></i>
       	<p>Big 'ol Camera Icon</p>
     </div>
   </div>
@@ -480,8 +517,10 @@ $('a[href*=#]:not([href=#])').click(function() {
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-40413119-1', 'bootply.com');
+
+          ga('create', 'UA-59396592-1', 'auto');
           ga('send', 'pageview');
+
         </script>
         
     </body>
