--- a/index.html
+++ b/index.html
@@ -215,11 +215,7 @@ footer .nav>li>a:hover {
   width="600"
   height="450"
   frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/view
-  ?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o
-  &center=-36.85916,-76.29933
-  &zoom=18
-  &maptype=satellite">
+  src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85916,-76.29933&zoom=18&maptype=satellite">
 </iframe>
         <br> 
         <br>
@@ -228,11 +224,7 @@ footer .nav>li>a:hover {
   width="600"
   height="450"
   frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/view
-  ?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o
-  &center=-36.85541,-76.29593
-  &zoom=18
-  &maptype=satellite">
+  src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85541,-76.29593&zoom=18&maptype=satellite">
 </iframe>
         <br> 
         <br>
@@ -241,11 +233,7 @@ footer .nav>li>a:hover {
   width="600"
   height="450"
   frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/view
-  ?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o
-  &center=-36.85894,-76.29887
-  &zoom=18
-  &maptype=satellite">
+  src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85894,-76.29887&zoom=18&maptype=satellite">
 </iframe>
         <br> 
       	<i style="font-size:120px" class="fa fa-map-marker fa-5x"></i>
