--- a/index.html
+++ b/index.html
@@ -180,9 +180,8 @@ footer .nav>li>a:hover {
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h1 class="text-center v-center">Get on the Water</h1>
-    <h3 class="text-center v-center">A boat launch in The Hague should be:</h1>
- 	
+  	<h1 class="text-center v-center">Get on the Water</h1> 
+    <p class="text-center lead">A boat launch in The Hague should be:</p> 	
   	<div class="container">
       <div class="row">
           <div class="col-sm-4">
@@ -209,53 +208,52 @@ footer .nav>li>a:hover {
   <div class="row">
   	<div class="col-sm-8 col-sm-offset-2 text-center">
         <h1>Locations</h1>
-      <div class="col-sm-4 col-xs-12">
-            <div class="list-group text-center">
-              <a href="#" class="list-group-item active">
-                <h2 class="list-group-item-heading">Current Options</h2>
-                <h6>Under consideration</h6>
-              </a>
-              <a href="#" class="list-group-item">
-                <p class="list-group-item-text">Dundaff and Fairfax</p>
-              </a>
-              <a href="#" class="list-group-item">
-                <p class="list-group-item-text">Mowbray and Botetourt</p>
-              </a>
-              <a href="#" class="list-group-item">
-                <p class="list-group-item-text">Mowbray and Fairfax</p>
-              </a>
-            </div>
-      </div><!--/middle-->
+          <i style="font-size:120px" class="fa fa-map-marker fa-5x"></i>
+          <div class="col-sm-4 col-xs-12">
+                <div class="list-group text-center">
+                  <a href="#" class="list-group-item active">
+                    <h2 class="list-group-item-heading">Current Options</h2>
+                    <h6>Under consideration</h6>
+                  </a>
+                  <a href="#" class="list-group-item">
+                    <p class="list-group-item-text">Dundaff and Fairfax</p>
+                  </a>
+                  <a href="#" class="list-group-item">
+                    <p class="list-group-item-text">Mowbray and Botetourt</p>
+                  </a>
+                  <a href="#" class="list-group-item">
+                    <p class="list-group-item-text">Mowbray and Fairfax</p>
+                  </a>
+                </div>
+          </div><!--/middle-->
         <br>
+    </div>
 		<p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
-<iframe
-  width="600"
-  height="450"
-  frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85916,-76.29933&zoom=18&maptype=satellite">
-</iframe>
+        <iframe
+          width="600"
+          height="450"
+          frameborder="0" style="border:0"
+          src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85916,-76.29933&zoom=18&maptype=satellite">
+        </iframe>
         <br> 
         <br>
     <p class="lead">East side of Smith's Creek: Mowbray and Botetourt.</p>
-<iframe
-  width="600"
-  height="450"
-  frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85541,-76.29593&zoom=18&maptype=satellite">
-</iframe>
+        <iframe
+          width="600"
+          height="450"
+          frameborder="0" style="border:0"
+          src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85541,-76.29593&zoom=18&maptype=satellite">
+        </iframe>
         <br> 
         <br>
     <p class="lead">Mowbray and Fairfax.</p>
-<iframe
-  width="600"
-  height="450"
-  frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85894,-76.29887&zoom=18&maptype=satellite">
-</iframe>
+        <iframe
+          width="600"
+          height="450"
+          frameborder="0" style="border:0"
+          src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=-36.85894,-76.29887&zoom=18&maptype=satellite">
+        </iframe>
         <br> 
-      	<i style="font-size:120px" class="fa fa-map-marker fa-5x"></i>
-      	<p>Location, Location, Location</p>
-    </div>
   </div>
 </section>
 
