--- a/index.html
+++ b/index.html
@@ -369,7 +369,20 @@ footer .nav>li>a:hover {
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2">
       <img src="/assets/example/bg_smartphones.jpg" class="img-responsive center-block ">
-      <p class="text-center">Images will scale down proportionately as browser width narrows.</p>
+      <p class="text-center">The following boat types are intended for support:</p>
+        <ul>
+          <li>Kayaks</li>
+          <li>Canoes</li>
+          <li>Small sailboats (e.g. Laser, Sunfish, etc)</li>
+          <li>Stand Up Paddleboard</li>  
+        </ul>
+      <p class="text-center">The following boat types are specifically <strong>excluded</strong> from support:</p>
+        <ul>
+          <li>Larger Boats</li>
+          <li>Jet Skis</li>
+          <li>Any boats being trailered</li>
+          <li>Other</li>
+        </ul>
       </div>
     </div>
 </section>
