--- a/index.html
+++ b/index.html
@@ -228,32 +228,18 @@ footer .nav>li>a:hover {
           </div>
     </div><!--/middle-->
     <br>
-		<p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
-        <iframe
-          width="600"
-          height="450"
-          frameborder="0" style="border:0"
-          src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=36.85916,-76.29933&zoom=18&maptype=satellite">
-        </iframe>
-        <br> 
-        <br>
+  </div>
+  <div class="row">
+  		<p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
+  </div>
+  <div class="row"> 
     <p class="lead">East side of Smith's Creek: Mowbray and Botetourt.</p>
-        <iframe
-          width="600"
-          height="450"
-          frameborder="0" style="border:0"
-          src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=36.85541,-76.29593&zoom=18&maptype=satellite">
-        </iframe>
-        <br> 
-        <br>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5274191161269!2d-76.29883900000002!3d36.858916000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMyLjEiTiA3NsKwMTcnNTUuOCJX!5e1!3m2!1sen!2sus!4v1423446664026" width="400" height="300" frameborder="0" style="border:0"></iframe>
+  </div>
+  <div class="row">
     <p class="lead">Mowbray and Fairfax.</p>
-        <iframe
-          width="600"
-          height="450"
-          frameborder="0" style="border:0"
-          src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBfQqXQheF7kkcB321zg4Ga22O_69yuF_o&center=36.85894,-76.29887&zoom=18&maptype=satellite">
-        </iframe>
-        <br> 
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5274191161269!2d-76.29883900000002!3d36.858916000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMyLjEiTiA3NsKwMTcnNTUuOCJX!5e1!3m2!1sen!2sus!4v1423446664026" width="400" height="300" frameborder="0" style="border:0"></iframe>
   </div>
 </section>
 
