--- a/index.html
+++ b/index.html
@@ -205,62 +205,65 @@ footer .nav>li>a:hover {
 </section>
 
 <section class="container-fluid" id="section2">
-  <div class="row">
-  	<div class="col-sm-8 text-center">
-        <h1>Locations</h1>
-          <i style="font-size:120px" class="fa fa-map-marker fa-5x"></i>
+  <div class="container">
+    <div class="row">
+    	<div class="col-sm-8 text-center">
+          <h1>Locations</h1>
+            <i style="font-size:120px" class="fa fa-map-marker fa-5x"></i>
+      </div>
     </div>
-  </div>
-  <div class="row">
+    <div class="row">
+        <div class="col-sm-4 col-xs-12">
+            <div class="list-group text-center">
+              <a href="#" class="list-group-item active">
+                <h2 class="list-group-item-heading">Current Options</h2>
+                <h6>Under consideration</h6>
+              </a>
+              <a href="#" class="list-group-item">
+                <p class="list-group-item-text">Dundaff and Fairfax</p>
+              </a>
+              <a href="#" class="list-group-item">
+                <p class="list-group-item-text">Mowbray and Botetourt</p>
+              </a>
+              <a href="#" class="list-group-item">
+                <p class="list-group-item-text">Mowbray and Fairfax</p>
+              </a>
+            </div>
+        </div><!--/middle-->
+    </div>
+    <div class="row">
       <div class="col-sm-4 col-xs-12">
-          <div class="list-group text-center">
-            <a href="#" class="list-group-item active">
-              <h2 class="list-group-item-heading">Current Options</h2>
-              <h6>Under consideration</h6>
-            </a>
-            <a href="#" class="list-group-item">
-              <p class="list-group-item-text">Dundaff and Fairfax</p>
-            </a>
-            <a href="#" class="list-group-item">
-              <p class="list-group-item-text">Mowbray and Botetourt</p>
-            </a>
-            <a href="#" class="list-group-item">
-              <p class="list-group-item-text">Mowbray and Fairfax</p>
-            </a>
-          </div>
-    </div><!--/middle-->
-    <br>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 col-xs-12">
-  		<p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
+    		<p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
+      </div>
+      <div class="col-sm-4 col-xs-12">
+        <div class="list-group text-center">
+          <h2 class="list-group-item-heading">Pros</h2>
+            <p class="list-group-item-text">asdf</p>
+            <p class="list-group-item-text">asdf</p>
+            <p class="list-group-item-text">asdf</p>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-12">
+        <div class="list-group text-center">
+          <h2 class="list-group-item-heading">Cons</h2>
+            <p class="list-group-item-text">asdf</p>
+            <p class="list-group-item-text">asdf</p>
+            <p class="list-group-item-text">asdf</p>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4 col-xs-12">
-      <h2>Pros</h2>
-      <ul>
-        <li>Notes</li>
-        <li>Notes</li>
-      </ul>
+    <div class="row"> 
+      <div class="col-sm-4 col-xs-12">
+        <p class="lead">East side of Smith's Creek: Mowbray and Botetourt.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5659246754641!2d-76.29585500000005!3d36.85539800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzE5LjQiTiA3NsKwMTcnNDUuMSJX!5e1!3m2!1sen!2sus!4v1423446979704" width="400" height="300" frameborder="0" style="border:0"></iframe>
+      </div>
     </div>
-    <div class="col-sm-4 col-xs-12">
-      <h2>Cons</h2>
-      <ul>
-        <li>Notes</li>
-        <li>Notes</li>
-      </ul>
-    </div>
-  </div>
-  <div class="row"> 
-    <div class="col-sm-4 col-xs-12">
-      <p class="lead">East side of Smith's Creek: Mowbray and Botetourt.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5659246754641!2d-76.29585500000005!3d36.85539800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzE5LjQiTiA3NsKwMTcnNDUuMSJX!5e1!3m2!1sen!2sus!4v1423446979704" width="400" height="300" frameborder="0" style="border:0"></iframe>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 col-xs-12">
-      <p class="lead">Mowbray and Fairfax.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5274191161269!2d-76.29883900000002!3d36.858916000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMyLjEiTiA3NsKwMTcnNTUuOCJX!5e1!3m2!1sen!2sus!4v1423446664026" width="400" height="300" frameborder="0" style="border:0"></iframe>
+    <div class="row">
+      <div class="col-sm-4 col-xs-12">
+        <p class="lead">Mowbray and Fairfax.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5274191161269!2d-76.29883900000002!3d36.858916000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMyLjEiTiA3NsKwMTcnNTUuOCJX!5e1!3m2!1sen!2sus!4v1423446664026" width="400" height="300" frameborder="0" style="border:0"></iframe>
+      </div>
     </div>
   </div>
 </section>
