--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@ footer .nav>li>a:hover {
 <section class="container-fluid" id="section2">
   <div class="container">
     <div class="row">
-    	<div class="col-sm-8 text-center">
+    	<div class="col-sm-12 text-center">
           <h1>Locations</h1>
             <i style="font-size:120px" class="fa fa-map-marker fa-5x"></i>
       </div>
     </div>
     <div class="row">
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-12 col-xs-12">
             <div class="list-group text-center">
               <a href="#" class="list-group-item active">
                 <h2 class="list-group-item-heading">Current Options</h2>
@@ -232,24 +232,28 @@ footer .nav>li>a:hover {
         </div><!--/middle-->
     </div>
     <div class="row">
-      <div class="col-sm-4 col-xs-12">
-    		<p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
+      <div class="col-sm-12 col-xs-12">
+        <p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 col-xs-12">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <div class="list-group text-center">
-          <h2 class="list-group-item-heading">Pros</h2>
-            <p class="list-group-item-text">asdf</p>
-            <p class="list-group-item-text">asdf</p>
-            <p class="list-group-item-text">asdf</p>
         </div>
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <div class="list-group text-center">
-          <h2 class="list-group-item-heading">Cons</h2>
-            <p class="list-group-item-text">asdf</p>
-            <p class="list-group-item-text">asdf</p>
-            <p class="list-group-item-text">asdf</p>
+        <div class="col-sm-4 col-xs-12">
+          <div class="list-group text-center">
+            <h2 class="list-group-item-heading">Pros</h2>
+              <p class="list-group-item-text">asdf</p>
+              <p class="list-group-item-text">asdf</p>
+              <p class="list-group-item-text">asdf</p>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <div class="list-group text-center">
+            <h2 class="list-group-item-heading">Cons</h2>
+              <p class="list-group-item-text">asdf</p>
+              <p class="list-group-item-text">asdf</p>
+              <p class="list-group-item-text">asdf</p>
+          </div>
         </div>
       </div>
     </div>
