--- a/index.html
+++ b/index.html
@@ -233,40 +233,77 @@ footer .nav>li>a:hover {
     </div>
     <div class="row">
       <div class="col-sm-12 col-xs-12">
-        <p class="lead">West side of Smith's Creek: Dundaff and Fairfax.</p>
+        <h2>Dundaff and Fairfax</h2>
+        <p class="lead">On the west side of Smith's Creek, this potential location is nearby the Stone Park and Stockley Gardens.</p>
       </div>
       <div class="row">
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-4 col-xs-12 text-center">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
         </div>
         <div class="col-sm-4 col-xs-12">
           <div class="list-group text-center">
             <h2 class="list-group-item-heading">Pros</h2>
-              <p class="list-group-item-text">asdf</p>
-              <p class="list-group-item-text">asdf</p>
-              <p class="list-group-item-text">asdf</p>
+              <p class="list-group-item-text">Large amount of unused, city-owned land</p>
+              <p class="list-group-item-text">Substantial parking available</p>
+              <p class="list-group-item-text">Walking distance to many residents</p>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
           <div class="list-group text-center">
             <h2 class="list-group-item-heading">Cons</h2>
-              <p class="list-group-item-text">asdf</p>
-              <p class="list-group-item-text">asdf</p>
-              <p class="list-group-item-text">asdf</p>
+              <p class="list-group-item-text">Potential inconvenience to residents on Dundaff</p>
+              <p class="list-group-item-text">Need to check depth</p>
           </div>
         </div>
       </div>
     </div>
     <div class="row"> 
-      <div class="col-sm-4 col-xs-12">
-        <p class="lead">East side of Smith's Creek: Mowbray and Botetourt.</p>
+      <div class="col-sm-12 col-xs-12">
+        <h2>Mowbray and Botetourt</h2>
+        <p class="lead">On the East side of Smith's Creek, this potential location is nearby the Hague footbridge and the Chrysler Museum.</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 col-xs-12 text-center">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5659246754641!2d-76.29585500000005!3d36.85539800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzE5LjQiTiA3NsKwMTcnNDUuMSJX!5e1!3m2!1sen!2sus!4v1423446979704" width="400" height="300" frameborder="0" style="border:0"></iframe>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <div class="list-group text-center">
+            <h2 class="list-group-item-heading">Pros</h2>
+              <p class="list-group-item-text">Nearby Chrysler Museum</p>
+              <p class="list-group-item-text">Substantial parking available</p>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <div class="list-group text-center">
+            <h2 class="list-group-item-heading">Cons</h2>
+              <p class="list-group-item-text">Small sailboats prevented due to footbridge height</p>
+              <p class="list-group-item-text">Existing launch (Stairs leading into water)</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-4 col-xs-12">
-        <p class="lead">Mowbray and Fairfax.</p>
+      <div class="col-sm-12 col-xs-12">
+        <h2>Mowbray and Fairfax</h2>
+        <p class="lead">On the West side of Smith's Creek, this potential location is in The Hague neighborhood and part of the current Hague walking park.</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 col-xs-12 text-center">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5274191161269!2d-76.29883900000002!3d36.858916000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMyLjEiTiA3NsKwMTcnNTUuOCJX!5e1!3m2!1sen!2sus!4v1423446664026" width="400" height="300" frameborder="0" style="border:0"></iframe>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <div class="list-group text-center">
+            <h2 class="list-group-item-heading">Pros</h2>
+              <p class="list-group-item-text">Walking distance to many residents</p>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <div class="list-group text-center">
+            <h2 class="list-group-item-heading">Cons</h2>
+              <p class="list-group-item-text">Potential inconvenience to residents in The Hague</p>
+              <p class="list-group-item-text">Limited parking</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
