--- a/index.html
+++ b/index.html
@@ -213,19 +213,19 @@ footer .nav>li>a:hover {
       </div>
     </div>
     <div class="row">
-        <div class="col-sm-12 col-xs-12">
+        <div class="col-sm-6 col-sm-offset-3 col-xs-12">
             <div class="list-group text-center">
               <a href="#" class="list-group-item active">
                 <h2 class="list-group-item-heading">Current Options</h2>
                 <h6>Under consideration</h6>
               </a>
-              <a href="#" class="list-group-item">
+              <a href="#loc1" class="list-group-item">
                 <p class="list-group-item-text">Dundaff and Fairfax</p>
               </a>
-              <a href="#" class="list-group-item">
+              <a href="#loc2" class="list-group-item">
                 <p class="list-group-item-text">Mowbray and Botetourt</p>
               </a>
-              <a href="#" class="list-group-item">
+              <a href="#loc3" class="list-group-item">
                 <p class="list-group-item-text">Mowbray and Fairfax</p>
               </a>
             </div>
@@ -233,7 +233,7 @@ footer .nav>li>a:hover {
     </div>
     <div class="row">
       <div class="col-sm-12 col-xs-12">
-        <h2>Dundaff and Fairfax</h2>
+        <h2><a id="loc1">Dundaff and Fairfax</a></h2>
         <p class="lead">On the west side of Smith's Creek, this potential location is nearby the Stone Park and Stockley Gardens.</p>
       </div>
       <div class="row">
@@ -259,7 +259,7 @@ footer .nav>li>a:hover {
     </div>
     <div class="row"> 
       <div class="col-sm-12 col-xs-12">
-        <h2>Mowbray and Botetourt</h2>
+        <h2><a id="loc2">Mowbray and Botetourt</a></h2>
         <p class="lead">On the East side of Smith's Creek, this potential location is nearby the Hague footbridge and the Chrysler Museum.</p>
       </div>
       <div class="row">
@@ -284,7 +284,7 @@ footer .nav>li>a:hover {
     </div>
     <div class="row">
       <div class="col-sm-12 col-xs-12">
-        <h2>Mowbray and Fairfax</h2>
+        <h2><a id="loc3">Mowbray and Fairfax</a></h2>
         <p class="lead">On the West side of Smith's Creek, this potential location is in The Hague neighborhood and part of the current Hague walking park.</p>
       </div>
       <div class="row">
