--- a/index.html
+++ b/index.html
@@ -129,6 +129,21 @@ footer .nav>li>a:hover {
     background-color:transparent;
 	color:#fff;
 }
+
+    .google-maps {
+        position: relative;
+        padding-bottom: 75%; // This is the aspect ratio
+        height: 0;
+        overflow: hidden;
+    }
+    .google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+    }
+
         </style>
     </head>
 
@@ -238,7 +253,9 @@ footer .nav>li>a:hover {
       </div>
       <div class="row">
         <div class="col-sm-4 col-xs-12 text-center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
+          <div class="google-maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
+          </div>
         </div>
         <div class="col-sm-4 col-xs-12">
           <div class="list-group text-center">
@@ -267,7 +284,9 @@ footer .nav>li>a:hover {
       </div>
       <div class="row">
         <div class="col-sm-4 col-xs-12 text-center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5659246754641!2d-76.29585500000005!3d36.85539800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzE5LjQiTiA3NsKwMTcnNDUuMSJX!5e1!3m2!1sen!2sus!4v1423446979704" width="400" height="300" frameborder="0" style="border:0"></iframe>
+          <div class="google-maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5659246754641!2d-76.29585500000005!3d36.85539800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzE5LjQiTiA3NsKwMTcnNDUuMSJX!5e1!3m2!1sen!2sus!4v1423446979704" width="400" height="300" frameborder="0" style="border:0"></iframe>
+          </div>
         </div>
         <div class="col-sm-4 col-xs-12">
           <div class="list-group text-center">
@@ -296,7 +315,9 @@ footer .nav>li>a:hover {
       </div>
       <div class="row">
         <div class="col-sm-4 col-xs-12 text-center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5274191161269!2d-76.29883900000002!3d36.858916000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMyLjEiTiA3NsKwMTcnNTUuOCJX!5e1!3m2!1sen!2sus!4v1423446664026" width="400" height="300" frameborder="0" style="border:0"></iframe>
+          <div class="google-maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5274191161269!2d-76.29883900000002!3d36.858916000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMyLjEiTiA3NsKwMTcnNTUuOCJX!5e1!3m2!1sen!2sus!4v1423446664026" width="400" height="300" frameborder="0" style="border:0"></iframe>
+          </div>
         </div>
         <div class="col-sm-4 col-xs-12">
           <div class="list-group text-center">
@@ -693,7 +714,7 @@ $('a[href*=#]:not([href=#])').click(function() {
           };
         }
         </script>
-                
+
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
