--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@ footer .nav>li>a:hover {
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <div class="list-group text-center">
-            <h2 class="list-group-item-heading">Pros</h2>
+          <div class="list-group">
+            <h2 class="list-group-item-heading text-center">Pros</h2>
               <ul>
                 <li>Large amount of unused, city-owned land</li>
                 <li>Substantial parking available</li>
@@ -268,8 +268,8 @@ footer .nav>li>a:hover {
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <div class="list-group text-center">
-            <h2 class="list-group-item-heading">Cons</h2>
+          <div class="list-group">
+            <h2 class="list-group-item-heading text-center">Cons</h2>
               <ul>
                 <li>Potential inconvenience to residents on Dundaff</li>
                 <li>Need to check depth</li>
@@ -289,8 +289,8 @@ footer .nav>li>a:hover {
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <div class="list-group text-center">
-            <h2 class="list-group-item-heading">Pros</h2>
+          <div class="list-group">
+            <h2 class="list-group-item-heading text-center">Pros</h2>
               <ul>
                 <li>Nearby Chrysler Museum</li>
                 <li>Substantial parking available</li>
@@ -298,8 +298,8 @@ footer .nav>li>a:hover {
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <div class="list-group text-center">
-            <h2 class="list-group-item-heading">Cons</h2>
+          <div class="list-group">
+            <h2 class="list-group-item-heading text-center">Cons</h2>
               <ul>
                 <li>Small sailboats prevented due to footbridge height</li>
                 <li>Existing launch (Stairs leading into water)</li>
@@ -320,16 +320,16 @@ footer .nav>li>a:hover {
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <div class="list-group text-center">
-            <h2 class="list-group-item-heading">Pros</h2>
+          <div class="list-group">
+            <h2 class="list-group-item-heading text-center">Pros</h2>
               <ul>
                 <li>Walking distance to many residents</li>
               </ul>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <div class="list-group text-center">
-            <h2 class="list-group-item-heading">Cons</h2>
+          <div class="list-group">
+            <h2 class="list-group-item-heading text-center">Cons</h2>
               <ul>
                 <li>Potential inconvenience to residents in The Hague</li>
                 <li>Limited parking</li>
