--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ footer .nav>li>a:hover {
       <div class="row">
         <div class="col-sm-4 col-xs-12 text-center">
           <div class="google-maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5659246754641!2d-76.29585500000005!3d36.85539800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzE5LjQiTiA3NsKwMTcnNDUuMSJX!5e1!3m2!1sen!2sus!4v1423446979704" width="400" height="300" frameborder="0" style="border:0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5659246754641!2d-76.29585500000005!3d36.85539800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzE5LjQiTiA3NsKwMTcnNDUuMSJX!5e1!3m2!1sen!2sus!4v1423446979704&sensor=false`" width="400" height="300" frameborder="0" style="border:0"></iframe>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
